--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,148 @@
-<div>
-  <h1>
-    Project Highlights
-  </h1>
-  <p>
+<div class="section section-md py-5">
+  <div class="container">
+    <!-- Title  -->
+    <div class="row">
+      <div class="col-md-4 text-center mx-auto">
+        <h1>
+          Project Timeline
+        </h1>
+      </div>
+    </div>
+    <div class="row mt-4">
+      <div class="col-md-10 mx-auto">
+        <!-- Timeline -->
+        <div class="timeline timeline-one">
+          <!-- Timeline Item 1 -->
+          <div class="timeline-item">
+            <h5 class="my-3">
+              May-August 2023: </h5>
+            <h5>Analyzed the Impact of Using Additional Weather Information on the Accuracy of Power Production Models for
+              Offshore Wind Turbines</h5>
+            <ul>
+              <li>Worked collaboratively under the guidance of supervisors from National Innovation Center for Data, UK
+                and Equinor, Norway.</li>
+              <li>Carried out an comprehensive analysis to study impact of additional atmospheric features and
+                atmospheric stability parameter like Obukhov Length by combining data from the turbine and weather
+                information from climate reanalysis data generated from numerical weather prediction models .</li>
+              <li>A directional analysis was carried out to study influence of features on power prediction when wind
+                flows across land and across sea.</li>
+              <li>The trained models were then deployed using flask framework with python for backend and AngularJS to
+                perform interactions at the front end.</li>
+            </ul>
+          </div>
+          <!-- Timeline Item 2 -->
+          <div class="timeline-item">
+            <h5 class="my-3">April 2023</h5>
+            <h5 class="my-3"> Participated and won a Data Science Hackathon organized by Newcastle University</h5>
+            <ul>
+              <li>Scraped data for a set of companies from various sources like public linkedin profiles, public
+                registries</li>
+              <li>Accumulated data pertaining to company specialities, technology, capital, shares and other information
+              </li>
+              <li>Preprocessed the raw data and managed the data using PostgreSQL</li>
+              <li>Presented the methodology used and outcome to the organizers</li>
+            </ul>
+          </div>
+          <!-- Timeline Item 3 -->
+          <div class="timeline-item">
+            <h5 class="my-3">March 2023</h5>
+            <h5 class="my-3">Analyzed employment data for a Care Home</h5>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="timeline-item">
+            <h5 class="my-3">February 2023</h5>
+            <h5 class="my-3">Fine Grained Image Classification</h5>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="timeline-item">
+            <h5 class="my-3">February 2023</h5>
+            <h5 class="my-3">Generated Images using CycleGAN</h5>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="timeline-item">
+            <h5 class="my-3">January 2023</h5>
+            <h5 class="my-3">Sci-Fi Text Generation</h5>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="timeline-item">
+            <h5 class="my-3">December 2022</h5>
+            <h5 class="my-3">Analyzed Datasets Related to US Road Traffic Accidents to Predict the Severity Using
+              Machine Learning</h5>
+            <ul>
+              <li>Performed preprocessing like normalization, feature selection, class imbalance correction using SMOTE
+              </li>
+              <li>Built several machine learning models using Logistic regression, KNN, Random Forest</li>
+              <li>Performed Kfold Cross validation and hyperparameter</li>
+              <li>Identified best performing model by comparing test accuracies</li>
+            </ul>
+          </div>
 
-  </p>
+          <div class="timeline-item">
+            <h5 class="my-3">December 2022</h5>
+            <h5 class="my-3">Image Denoising in Frequency Domain Using Fourier Transform Based Algorithm</h5>
+            <ul>
+              <li>Performed preprocessing to normalize and resize images.
+              </li>
+              <li>Built an algorithm to denoise image in frequency domain by analyzing power spectrum for different noise levels</li>
+              <li>Created a pipeline to handle denoising for different noise levels for unseen images</li>
+              <li>Compared the performance of the custom algorithm with well established methods like mean, median, Bayes, Visushrink using metrics like MSE, SSIM </li>
+            </ul>
+          </div>
+          <div class="timeline-item">
+            <h5 class="my-3">November 2022</h5>
+            <h5 class="my-3">Analyzed data from Massive Open Online Courses (MOOCs) offered by Newcastle University on FutureLearn</h5>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="timeline-item">
+            <h5 class="my-3">OCtober 2022</h5>
+            <h5 class="my-3">Breast Cancer Classifier</h5>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="timeline-item">
+            <h5 class="my-3">September 2022</h5>
+            <h5 class="my-3">Exploratory Analysis on Penguin Species</h5>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="timeline-item">
+            <h5 class="my-3">September 2022</h5>
+            <h5 class="my-3">Built Visualization Dashboards to get Insights on the Spread of an Airborne Disease in Manchester from Simulated Data</h5>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+        </div>
+        <!--End of Timeline-->
+      </div>
+    </div>
+  </div>
 </div>
