--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -335,7 +335,7 @@
 }
 .speech-bubble{
   text-align:center;
-  font-family:cursive;
+  font-family:monospace;
   font-size:20px;
   font-weight:bold;
   color:var(--text-color);
@@ -356,7 +356,7 @@
 @media (max-width: 820px) {
   .speech-bubble{
     text-align:center;
-    font-family:cursive;
+    font-family:monospace;
     font-size:12px;
     font-weight:bold;
     color:var(--text-color);
@@ -377,7 +377,7 @@
 @media (max-width: 450px) {
   .speech-bubble{
     text-align:center;
-    font-family:cursive;
+    font-family:monospace;
     font-size:8px;
     font-weight:bold;
     color:var(--text-color);
