--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,7 +83,7 @@
                 <div class="ratio ratio-16x9">
                   <img src="/assets/offshore-turbine.jpg" alt="">
                 </div>
-                <a href="https://github.com/paul2596/oswt_app" class="btn btn-primary" target="_blank"
+                <a href="https://github.com/paul2596/oswt_app" class="btn btn-primary margin-top-10" target="_blank"
                   rel="noopener noreferrer">GitHub Repo</a>
               </div>
             </div>
@@ -94,7 +94,7 @@
                 <div class="ratio ratio-16x9">
                   <img src="/assets/data-viz.png" alt="">
                 </div>
-                <a href="https://github.com/paul2596/oswt_app" class="btn btn-primary" target="_blank"
+                <a href="https://github.com/paul2596/oswt_app" class="btn btn-primary margin-top-10" target="_blank"
                   rel="noopener noreferrer">GitHub Repo</a>
               </div>
             </div>
@@ -105,7 +105,7 @@
                 <div class="ratio ratio-16x9">
                   <img src="/assets/selenium-python-img.png" alt="">
                 </div>
-                <a href="https://github.com/paul2596/Data-Science-Hackathon" class="btn btn-primary" target="_blank"
+                <a href="https://github.com/paul2596/Data-Science-Hackathon" class="btn btn-primary margin-top-10" target="_blank"
                   rel="noopener noreferrer">GitHub Repo</a>
               </div>
             </div>
