--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -101,7 +101,7 @@
             <div class="col-lg-4 col-md-12 col-sm-12">
               <div class="card project-card">
                 <h6>Built Multiple Automated Scrapers To Extract Useful Information About Companies for a Data Science
-                  Hackathon and Won it</h6>
+                  Hackathon and Won the Hackathon</h6>
                 <div class="ratio ratio-16x9">
                   <img src="/assets/selenium-python-img.png" alt="">
                 </div>
