--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -653,3 +653,9 @@
     </div>
   </div>
 </div>
+
+<footer>
+  <div class="container footer-text">
+    Developed and Maintained by Vinit Paul&copy;
+  </div>
+</footer>
