--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -656,6 +656,6 @@
 
 <footer>
   <div class="container footer-text">
-    Developed and Maintained by Vinit Paul&copy;
+    &copy;Developed and Maintained by Vinit Paul
   </div>
 </footer>
