--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -116,7 +116,7 @@
           <div class="row">
             <div class="col-md-4 text-center mx-auto margin-top-10">
               <h4>
-                Projects Timeline View
+                Projects Timeline
               </h4>
             </div>
           </div>
