--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -580,7 +580,7 @@
         <div class="card education-card">
           <p>2014 - 2018</p>
           <p><b> B.Tech in Mechanical Engineering
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
           </p>
           <p>Reva University</p>
           <p class="text-14">Grade:<b>Distinction</b></p>
