updated text and UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -423,12 +423,12 @@
           <div class="chip"><a href="https://www.ncl.ac.uk/" target="_blank" rel="noopener noreferrer"
               class="work-exp-web">Newcastle University</a></div>
           <ul class="work-details-font">
-            <li>Built automated web scrapers using selenium in python.</li>
+            <li>Worked as a Research Assistant, actively contributing to the development of a prototype for an analysis dashboard proposed to an esteemed organization. </li>
+            <li>Built automated web scrapers using selenium in python for data extraction.</li>
             <li>Preprocessed and managed data using python and PostgreSQL.</li>
             <li>Carried out various NLP based analysis to extract insights on the raw data like clustering, LDA (Latent
               Discriminant Analysis).</li>
-            <li>Built a standalone application based on Flask Framework with Angular for frontend interactions.</li>
-            <li>Presented the analysis on the web application by integrating analysis from python and dashboards from
+            <li>Built a standalone application based on Flask Framework and presented the analysis on the web application by integrating analysis from python and dashboards from
               PowerBI </li>
           </ul>
         </div>
