--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -470,73 +470,73 @@
           <div class="sub-three-grid-cards">
             <div class="new-col">
               <div class="skill-card">
-                <img [src]=pythonImagePath alt="" class="skills-img">
-                <span class="card-title">Python</span>
+                <div><img [src]=pythonImagePath alt="" class="skills-img"></div>
+                <div class="card-title">Python</div>
                 <!-- <div class="progress--cover">
                   <div class="html--progress"></div>
                 </div> -->
               </div>
               <div class="skill-card">
-                <img [src]=powerbiImagePath alt="" class="skills-img">
-                <span class="card-title">Power BI</span>
+                <div><img [src]=powerbiImagePath alt="" class="skills-img"></div>
+                <div class="card-title">Power BI</div>
               </div>
               <div class="skill-card">
-                <img [src]=rImagePath alt="" class="skills-img">
-                <span class="card-title">R</span>
+                <div><img [src]=rImagePath alt="" class="skills-img"></div>
+                <div class="card-title">R</div>
               </div>
 
               <div class="skill-card">
-                <img [src]=javaImagePath alt="" class="skills-img">
-                <span class="card-title">Java</span>
+                <div><img [src]=javaImagePath alt="" class="skills-img"></div>
+                <div class="card-title">Java</div>
               </div>
               <div class="skill-card">
-                <img [src]=tensorflowImagePath alt="" class="skills-img">
-                <span class="card-title">Tensorflow</span>
+                <div><img [src]=tensorflowImagePath alt="" class="skills-img"></div>
+                <div class="card-title">Tensorflow</div>
               </div>
             </div>
             <div class="new-col">
               <div class="skill-card">
-                <img [src]=pysparkImagePath alt="" class="skills-img">
-                <span class="card-title">PySpark</span>
+                <div><img [src]=pysparkImagePath alt="" class="skills-img"></div>
+                <div class="card-title">PySpark</div>
               </div>
               <div class="skill-card">
                 <img [src]=scikitlearnImagePath alt="" class="skills-img">
-                <span class="card-title">scikit learn</span>
+                <div class="card-title">scikit learn</div>
               </div>
               <div class="skill-card">
                 <img [src]=matplotlibImagePath alt="" class="skills-img">
-                <span class="card-title">Matplotlib</span>
+                <div class="card-title">Matplotlib</div>
               </div>
               <div class="skill-card">
                 <img [src]=cssImagePath alt="" class="skills-img">
-                <span class="card-title">CSS</span>
+                <div class="card-title">CSS</div>
               </div>
               <div class="skill-card">
                 <img [src]=angularImagePath alt="" class="skills-img">
-                <span class="card-title">Angular</span>
+                <div class="card-title">Angular</div>
               </div>
             </div>
             <div class="new-col">
 
               <div class="skill-card">
                 <img [src]=postgresqlImagePath alt="" class="skills-img">
-                <span class="card-title">PostgreSQL </span>
+                <div class="card-title">PostgreSQL </div>
               </div>
               <div class="skill-card">
                 <img [src]=tableauImagePath alt="" class="skills-img">
-                <span class="card-title">Tableau</span>
+                <div class="card-title">Tableau</div>
               </div>
               <div class="skill-card">
                 <img [src]=flaskImagePath alt="" class="skills-img">
-                <span class="card-title">Flask</span>
+                <div class="card-title">Flask</div>
               </div>
               <div class="skill-card">
                 <img [src]=htmlflowImagePath alt="" class="skills-img">
-                <span class="card-title">HTML</span>
+                <div class="card-title">HTML</div>
               </div>
               <div class="skill-card">
                 <img [src]=gitImagePath alt="" class="skills-img">
-                <span class="card-title">GIT</span>
+                <div class="card-title">GIT</div>
               </div>
             </div>
           </div>
