--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -390,7 +390,7 @@
     min-width: 320px;
   }
   .bubble-position{
-    bottom: 125px !important;
+    bottom: 112px !important;
     right: 10px !important;
   }
 }
@@ -415,6 +415,29 @@
     right: 4px !important;
   }
 }
+
+
+@media (max-width: 280px) {
+  .speech-bubble{
+    text-align:center;
+    font-family:monospace;
+    font-size:8px;
+    font-weight:bold;
+    color:var(--text-color);
+    background:var(--bubble-color);
+    padding:0.5em;
+    position:absolute;
+    border-radius:var(--bubble-corners);
+    max-width:var(--w);
+    box-shadow:0 0 0 var(--border-size) var(--border-color);
+    min-width: 200px;
+  }
+  .bubble-position{
+    bottom: 50px !important;
+    right: 0px !important;
+  }
+}
+
 .speech-bubble.round{
   --bubble-corners:1em;
 }
