--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -602,3 +602,11 @@
 .footer-text{
   text-align: right;
 }
+
+.proj-list-height{
+  min-height: 150px;
+}
+
+#itemsList li:not(:first-child) {
+  display: none;
+}
