--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -377,7 +377,7 @@
               <div class="ratio ratio-16x9 margin-bottom-10">
                 <img src="/assets/hvof-image.png" alt="">
               </div>
-              <ul>
+              <ul class="ul-text">
                 <li>Visualized weight changes across cycles helped understand material behavior.</li>
                 <li>Identified surface composition changes through XRD(X-Ray Diffraction) and cluster analysis.</li>
                 <li>Carried out Analysis on the SEM(Scanning Electron Microscope) data revealing topography changes.
@@ -395,7 +395,7 @@
               <div class="ratio ratio-16x9 margin-bottom-10">
                 <img src="/assets/solar-car-img.PNG" alt="">
               </div>
-              <ul>
+              <ul class="ul-text">
                 <li>Used SolidWorks for comprehensive design and structural analysis.</li>
                 <li>Analyzed to identify potential failure sites, which were refined over several iterations, thus
                   improving the design and raising the Factor of Safety.</li>
@@ -414,7 +414,7 @@
               <div class="ratio ratio-16x9 margin-bottom-10">
                 <img src="/assets/atv-img.jpg" alt="">
               </div>
-              <ul>
+              <ul class="ul-text">
                 <li>Worked on the Design and analysis of the ATV's roll cage, ensuring structural integrity and safety
                   under various conditions.</li>
                 <li>Identified key points for suspension, for optimum performance and stability across diverse terrains.
