--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -113,7 +113,7 @@
                   <li *ngIf="showMoreVizItems">Enhanced user experience by implementing customized filters using the Haversine equation for radial disease spread based on regional coordinates.</li>
                 </ul>
                 <button (click)="toggleVizItems()">View {{ showMoreVizItems ? 'Less' : 'More' }}</button>
-                <a href="https://github.com/paul2596/oswt_app" class="btn btn-primary margin-top-10" target="_blank"
+                <a href="https://github.com/paul2596/data_visualization_sep_2022" class="btn btn-primary margin-top-10" target="_blank"
                   rel="noopener noreferrer">Visit GitHub Repo</a>
               </div>
             </div>
